--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,8 @@
                 <h2 class="hero">Get in Touch</h2>
                 <p>We'd love to hear from you. Please fill out the form below or use our contact information to reach us directly.</p>
                 
-                <form class="contact-form">
+                <form class="contact-form"action="https://formspree.io/f/mldlwljj"
+  method="POST">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
 
@@ -78,4 +79,5 @@
     </footer>
 
 </body>
+
 </html>
